Fix for scoll-to elements being hidden behind sticky navigation [SCI-7937]

--- a/app/assets/stylesheets/my_modules.scss
+++ b/app/assets/stylesheets/my_modules.scss
@@ -6,6 +6,11 @@
 
 @import "constants";
 
+// Fix for elements being scrolled to being hidden behind sticky navigation
+html {
+  scroll-padding-top: 128px;
+}
+
 .protocol-description-content {
   margin: 20px 0 20px 10px;
 }
